[gd_scene load_steps=8 format=3 uid="uid://mp1doe6lxein"]

[ext_resource type="Texture2D" uid="uid://davk3as2tq5ut" path="res://art/textures/GUI_Assets.png" id="1_jpe5o"]
[ext_resource type="Script" uid="uid://c4ni51826b2e" path="res://scripts/ui/level_up.gd" id="1_r8t7i"]
[ext_resource type="Texture2D" uid="uid://bqs3gw33e3f2u" path="res://art/textures/fen.png" id="2_sw2ff"]
[ext_resource type="Theme" uid="uid://l5nt8aeex4yj" path="res://scenes/userinterface/button_theme.tres" id="3_kd365"]
[ext_resource type="StyleBox" uid="uid://bxg7htv4vn5rw" path="res://scenes/userinterface/button_hover_style.tres" id="4_o43dc"]
[ext_resource type="Texture2D" uid="uid://bxkugojenvo5a" path="res://art/textures/UI_Spritesheet.png" id="5_4mlli"]
[ext_resource type="StyleBox" uid="uid://b1of47kyh6aop" path="res://scenes/userinterface/level_up_frame.tres" id="6_qq5ux"]

[node name="LevelUp" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.418
anchor_right = 0.646
anchor_bottom = 0.96800005
offset_top = 21.135986
offset_right = -168.19202
offset_bottom = -335.26404
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8t7i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/Control"]
layout_mode = 0
offset_left = 39.0
offset_top = 304.0
offset_right = 148.0
offset_bottom = 334.0
theme = ExtResource("3_kd365")
text = "CLOSE"

[node name="Background" type="NinePatchRect" parent="VBoxContainer/Control"]
z_index = -3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -31.0
offset_right = 177.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jpe5o")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Icon" type="NinePatchRect" parent="VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -27.0
offset_right = 5.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jpe5o")
region_rect = Rect2(128, 0, 32, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Control/Icon"]
clip_contents = true
layout_mode = 0
offset_right = 28.0
offset_bottom = 28.0
color = Color(1, 1, 1, 0)

[node name="Icon_texture" type="TextureRect" parent="VBoxContainer/Control/Icon/ColorRect"]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.071428575
anchor_top = 0.10714286
anchor_right = 0.071428575
anchor_bottom = 0.10714286
offset_right = 31.0
offset_bottom = 51.0
texture = ExtResource("2_sw2ff")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.89800006
anchor_right = 0.89800006
offset_left = -18.920002
offset_top = -22.0
offset_right = 143.08
offset_bottom = 252.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CharacterName" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Character name"
horizontal_alignment = 1

[node name="LevelTitle" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Level up!"
horizontal_alignment = 1

[node name="LevelNumber" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("4_o43dc")
text = "Level 3"
horizontal_alignment = 1

[node name="BGStats" type="NinePatchRect" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/LevelNumber"]
layout_mode = 0
offset_left = -17.0
offset_top = 33.0
offset_right = 160.0
offset_bottom = 281.0
texture = ExtResource("5_4mlli")
region_rect = Rect2(192, 1, 32, 30)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="HealthStat" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_qq5ux")
text = "Health 3 ⬆ 1"

[node name="StrengthStat" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_qq5ux")
text = "Strength 3 ⬆ 1"

[node name="MovementStat" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_qq5ux")
text = "Movement 4"

[node name="MindStat" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_qq5ux")
text = "Mind 3 ⬆ 1"

[node name="SpeedStat" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_qq5ux")
text = "Speed 3"

[node name="FocusStat" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_qq5ux")
text = "Focus 3"

[node name="EnduranceStat" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_qq5ux")
text = "Endurance 3"

[connection signal="pressed" from="VBoxContainer/Control/Button" to="." method="_on_button_pressed"]
